k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-greeting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-greeting
  template:
    metadata:
      labels:
        app: backend-greeting
    spec:
      containers:
      - name: backend-greeting
        image: 228122752878.dkr.ecr.us-east-1.amazonaws.com/vm-poc-backend-greeting:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-greeting
spec:
  selector:
    app: backend-greeting
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 228122752878.dkr.ecr.us-east-1.amazonaws.com/vm-poc-frontend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:228122752878:certificate/b0f6748b-5cb8-4faa-a50a-bf8a350b0c6f
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: vm-test.robs-fortinet-apps.com
spec:
  rules:
    - host: vm-test.robs-fortinet-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
